# Python-Training

./: .gitignore
case-management-ai/: Makefile  README.md  case_tasks.json  main.py  run.sh
case-management-ai/.myenv/: pyvenv.cfg
hello-world/: agent.json  agent1.json  main.py  playwright-script.py  pyproject.toml  requirements.txt
log-agent/: agent.py  langchain-agent.py  requirements.txt  runbook_map.json
log-agent/simulated_repo/app/: main.py
web-scraping/: README.md  out.json
web-scraping/src/webscraper/: scraper.py
